# note

./: Cargo.toml  Dockerfile  Makefile  README.md  appveyor.yml
src/: cli.rs  file.rs  lib.rs  main.rs  note.rs  notes.rs  test.rs
