[package]
name = "note-rs"
version = "0.1.0"
description = "note in cmd"
homepage = "https://github.com/robatipoor/note-rs"
keywords = ["note", "wite","text"]
license = "MIT"
repository = "https://github.com/robatipoor/note-rs"
authors = ["Mahdi <Mahdi.robatipoor@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.2.0"
tempfile = "3.0.5"
clap = "2.32.0"
colored = "1.6.1"
regex = "1.1.0"
