[package]
name = "note-rs"
version = "0.2.0"
description = "note in cmd"
homepage = "https://github.com/robatipoor/note-rs"
keywords = ["note", "wite","text"]
license = "MIT"
repository = "https://github.com/robatipoor/note-rs"
authors = ["Mahdi <Mahdi.robatipoor@gmail.com>"]
edition = "2018"

[dependencies]
colored = "1.8.0"
dirs = "2.0.1"
clap = "2.33.0"